    * FIX: check_http: Fixed syntax error when monitoring certificates
    * FIX: check_dns: parameter -A does not get an additional string
    * FIX: diskstat: Fixed wrong values for IO/s computation on linux hosts
    * FIX: blade_healts: Fixed wrong index checking resulting in exceptions
    * FIX: mrpe: gracefully handle invalid plugin exit codes

    Multisite:
    * FIX: LDAP: Disabling use of referrals in active directory configuration
    * FIX: Fixed missing roles in auth.php (in some cases) which resulted in
           non visible pnp graphs and missing nagvis permissions
    * FIX: Fixed label color of black toner perfometers when fuel is low
    * FIX: Fixed wrong default settings of view filters in localized multisite
    * FIX: Fixed exception when enabling sounds for views relying on 
           e.g. alert statistics source
    * FIX: Folder Tree Snapin: make folder filter also work for remote
           folders that do not exist locally
    * FIX: correctly display sub-minute check/retry intervals

    WATO:
    * FIX: fix layout of Auxiliary tags table
    * FIX: avoid exception when called first time and first page ist host tags
    * FIX: fix validation of time-of-day input field (24:00)
    * FIX: automation users can now be deleted again (bug was introduced in 1.2.2p1)
    * FIX: fix logwatch pattern analyzer message "The host xyz is not
           managed by WATO." after direct access via snapin
    * FIX: Fixed first toggle of flags in global settings when default is set to True
    * FIX: fix exception and loss of hosts in a folder when deleting all site connections
           of a distributed WATO setup
    * FIX: avoid Python exception for invalid parameters even in debug mode

    Event Console:
    * FIX: apply rewriting of application/hostname also when cancelling events

    Livestatus:
    * livestatus: fixed incorrect output formatting of comments_with_info column

1.2.2p2:
    Core: